2009-06-28 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-action.c:
	* src/common/na-action.h:
	UUID is no more a contruction only property.
	NAAction is now initialized with suitable default values.
	na_action_new_with_profile: new function.

	* src/common/na-action-profile.c:
	* src/common/na-action-profile.h:
	Profile's name is no more a construction only property.
	na_action_profile_copy function is renamed as
	na_action_profile_duplicate.

	* src/na/na-gconf.c:
	Temporarily suspend test of writability status.

	* src/nact/nact-action-conditions-editor.c:
	* src/nact/nact-action-conditions-editor.h:
	* src/nact/nact-action-profiles-editor.c:
	* src/nact/nact-action-profiles-editor.h:
	* src/nact/nact-profile-conditions-editor.c:
	* src/nact/nact-profile-conditions-editor.h:
	Definitive names for dialog management.

	* src/nact/nact-imenu-item.c:
	Connect the signal handler before setting the initial icon.

	* src/nact/nact-iprofile-conditions.c:
	* src/nact/nact-iprofile-conditions.h:
	IActionConditions interface is renamed as IProfileConditions.

	* src/nact/Makefile.am:
	Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	initial_load_toplevel, runtime_init_toplevel, all_widgets_showed:
	new functions.
	
	* src/nact/nact-imenu-item.c:
	signal_recorded: new function.

	* src/nact/nact-main-window.c:
	Implement initial_load_toplevel and runtime_init_toplevel
	functions.

	* src/nact/nact-window.c:
	nact_window_on_signal_recorded: new function.

2009-06-26 Pierre Wieser <pwieser@trychlos.org>

	Migration to GtkBuilder.
	IPivotContainer interface definition.
	IActionConditions and IMenuItem UI interface definitions.

	* configure.ac:
	Update Gtk+ dependancy to 2.12 to have gtk_builder functions.
	Remove libglade dependancy.

	* src/common/na-action-profile.c:
	* src/common/na-action.c:
	* src/common/na-gconf.c:
	* src/common/na-object.c:
	* src/common/na-pivot.c
	(instance_dispose): g_free( self->private ).
