@@ -1,8 +1,8 @@
 src/common/nautilus-actions-config.c
 src/common/nautilus-actions-config-gconf-private.h
 src/common/nautilus-actions-config-schema-reader.c
-src/nact/nact.c
 src/nact/nact-application.c
+src/nact/nact-main-window.c
 src/nact/nact.desktop.in
 src/nact/nact-action-editor.c
 src/nact/nact-editor.c
@@ -10,6 +10,6 @@ src/nact/nact-import-export.c
 src/nact/nact-prefs.c
 src/nact/nact-profile-editor.c
 src/nact/nact-utils.c
-src/nact/nautilus-actions-config.glade
+src/nact/nautilus-actions-config.ui
 src/utils/nautilus-actions-new-config.c
 src/utils/nautilus-actions-tools-utils.c
